configure swagger & handle global error
